fix: copyright symbol

--- a/index.html
+++ b/index.html
@@ -465,6 +465,9 @@
             </div>
           </div>
         </div>
+        <div class="padding-top-900 text-align">
+          <p>&#169; 2024</p>
+        </div>
       </div>
     </footer>
   </body>
