fix: made 2 sections responsive

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <section class="padding-block-900 hero bg-primary-400 text-neutral-100">
         <div class="container">
           <div class="even-columns">
-            <div class="flow">
-              <h1 class="fs-600 fw-bold">Tally on cloud !</h1>
+            <div class="hero-left">
+              <h1 class="fs-600 fw-bold margin-bottom-100">Tally on cloud !</h1>
               <p class="fs-400">
                 Unlock the potential of hassle-free accounting with our Tally on
                 Cloud service. Experience real-time collaboration, secure data
@@ -104,7 +104,7 @@
       <section class="padding-block-900 bubble-section">
         <div class="container">
           <h2
-            class="fw-bold fs-500 text-align margin-bottom-200 margin-top-200"
+            class="fw-bold fs-500 text-align margin-bottom-100 margin-top-200"
           >
             Benefits of Tally on cloud
           </h2>
@@ -198,7 +198,7 @@
       <section class="padding-block-700">
         <div class="container">
           <h2
-            class="fw-bold fs-500 margin-bottom-200 margin-top-200 text-align"
+            class="fw-bold fs-500 margin-bottom-200 margin-top-100 text-align"
           >
             Why Choose Us ?
           </h2>
@@ -218,7 +218,6 @@
                 21 years of business experience and cloud expertise
               </p>
             </div>
-
             <div class="card">
               <img src="assets/server-64.png" alt="icon" />
               <h3 class="fs-450 fw-semi-bold">Everything in one place</h3>
@@ -349,7 +348,6 @@
                 <p>With 99.995 percent uptime, with guaranteed SLA</p>
               </div>
             </div>
-
             <div class="feature-card">
               <img src="assets/statistics-report-68.png" alt="" />
               <div>
