--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>Tally</title>
+    <title>Krisha Soft Solutions</title>
   </head>
   <body>
     <header>
@@ -20,10 +20,10 @@
           <nav>
             <ul role="list" class="nav-list">
               <li>
-                <a href="tel:0">9999-999</a>
+                <a href="tel:+91 93726 99231">Call</a>
               </li>
               <li>
-                <a href="mailto:xyz">xyz@abc.com</a>
+                <a href="mailto:sales@krishasoftsolutions.in">E-mail</a>
               </li>
             </ul>
           </nav>
@@ -36,12 +36,14 @@
         <div class="container">
           <div class="even-columns">
             <div class="hero-left">
-              <h1 class="fs-600 fw-bold margin-bottom-100">Tally on cloud !</h1>
+              <h1 class="fs-600 fw-bold margin-bottom-100">
+                Tally Cloud Solutions !
+              </h1>
               <p class="fs-400">
-                Unlock the potential of hassle-free accounting with our Tally on
-                Cloud service. Experience real-time collaboration, secure data
-                access, and unparalleled flexibility for streamlined business
-                operations. Elevate your accounting game effortlessly!
+                Tally Cloud Solutions refer to the cloud-based implementation of
+                the popular Tally accounting software. It allows users to access
+                their Tally Software and data from anywhere, at any time,
+                fostering seamless collaboration and scalability.
               </p>
             </div>
             <div class="questionaire-outer">
@@ -51,9 +53,11 @@
                 <form action="">
                   <div>
                     <select name="profile" id="profile">
-                      <option value="business">Business Owner</option>
-                      <option value="student">Student</option>
-                      <option value="other">Other</option>
+                      <option value="BusinessOwner">Business Owner</option>
+                      <option value="CA">C.A.</option>
+                      <option value="Accountant">Accountant</option>
+                      <option value="TaxConsultant">Tax Consultant</option>
+                      <option value="Other">Other</option>
                     </select>
                   </div>
                   <div>
@@ -92,7 +96,7 @@
                     </select>
                   </div>
                   <div class="button-div">
-                    <button type="submit">Submit</button>
+                    <button type="submit">Access Pricing</button>
                   </div>
                 </form>
               </div>
@@ -114,25 +118,39 @@
                 <div class="margin-top-200 flex">
                   <img src="assets/central-database-53.png" alt="icon" />
                   <p class="benefit-p">
-                    Centralised data access from anywhere-anytime-anydevice
+                    Anytime, Anywhere, Any Device: Centralised Data Access
+                    Simplified
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
                   <img src="assets/statistics-report-68.png" alt="icon" />
                   <p class="benefit-p">
-                    Ease in planning, budgeting, forecasting and analyzing
+                    Improving the Simplicity and Efficiency of Planning,
+                    Budgeting, Forecasting, and Analysis
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
                   <img src="assets/server-64.png" alt="icon" />
+                  <p class="benefit-p">Automated Data Backup Solutions</p>
+                </div>
+                <div class="margin-top-200 flex">
+                  <img src="assets/security-shield-50.png" alt="icon" />
                   <p class="benefit-p">
-                    High speed of access due to blade servers
+                    Engaging Control Panel: A Dynamic Alternative to Interactive
+                    Dashboards
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
                   <img src="assets/security-shield-50.png" alt="icon" />
                   <p class="benefit-p">
-                    High level of data security and privacy
+                    Automatic Performance Optimisation: Enhancing Efficiency
+                    with Ease
+                  </p>
+                </div>
+                <div class="margin-top-200 flex">
+                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <p class="benefit-p">
+                    Customisable Cloud Solutions with Built-in Scalability
                   </p>
                 </div>
               </div>
@@ -141,7 +159,7 @@
               <img src="assets/cloud-computing-data.svg  " alt="" />
             </div>
           </div>
-          <button class="cta margin-top-200">Start 7 Day Free Trail</button>
+          <button class="cta margin-top-200">Get Free Trail</button>
         </div>
         <div class="wave-1">
           <svg
@@ -166,14 +184,14 @@
             <div class="flex">
               <img src="assets/light-central-database-53.png" alt="icon" />
               <div class="benefit-p">
-                <p class="fw-bold fs-450">25K+</p>
+                <p class="fw-bold fs-450">1500+</p>
                 <p>Active Users</p>
               </div>
             </div>
             <div class="flex">
               <img src="assets/light-central-database-53.png" alt="icon" />
               <div class="benefit-p">
-                <p class="fw-bold fs-450">95%</p>
+                <p class="fw-bold fs-450">98%</p>
                 <p>Retention Rate</p>
               </div>
             </div>
@@ -187,8 +205,8 @@
             <div class="flex">
               <img src="assets/light-central-database-53.png" alt="icon" />
               <div class="benefit-p">
-                <p class="fw-bold fs-450">5 star</p>
-                <p>Tally Certified Partner</p>
+                <p class="fw-bold fs-450">Official</p>
+                <p>Tally Cloud Partner</p>
               </div>
             </div>
           </div>
@@ -205,25 +223,27 @@
           <div class="why-choose margin-top-200">
             <div class="card">
               <img src="assets/server-64.png" alt="icon" />
-              <h3 class="fs-450 fw-semi-bold">5 Star Tally Certified</h3>
+              <h3 class="fs-450 fw-semi-bold">Authorised Cloud Partner</h3>
               <p class="text-align">
-                India's Only 5 Star Tally Partner with own Data Center
-                Infrastructure Setup
+                India's Single Authorised Tally Partner with Proprietary Data
+                Center Setup
               </p>
             </div>
             <div class="card">
               <img src="assets/server-64.png" alt="icon" />
-              <h3 class="fs-450 fw-semi-bold">Experience with Value</h3>
+              <h3 class="fs-450 fw-semi-bold">Solo Supplier</h3>
               <p class="text-align">
-                21 years of business experience and cloud expertise
+                All Your Needs in One Place: Cloud, Tally Support, Renewals,
+                Add-ons, and Customization from a Single Vendor
               </p>
             </div>
             <div class="card">
               <img src="assets/server-64.png" alt="icon" />
-              <h3 class="fs-450 fw-semi-bold">Everything in one place</h3>
+              <h3 class="fs-450 fw-semi-bold">Dedicated Support Team</h3>
               <p class="text-align">
-                Single vendor for Cloud, Tally Support, Renewals, Add ons and
-                Customisations
+                With two decades of business know- how and mastery in cloud
+                technology, we have the best-certified engineers. We provide
+                support 24/7, 365 days a year
               </p>
             </div>
             <div class="card">
@@ -306,10 +326,17 @@
 
       <section class="padding-top-900 padding-bottom-1100 bubble-section">
         <div class="container">
-          <h2 class="fw-bold fs-500 margin-bottom-200 text-align">
-            Tally on Cloud Features
+          <p class="fw-semi-bold text-align margin-bottom-100">
+            Prepared to Make a Move ?
+          </p>
+          <h2 class="fw-bold fs-500 margin-bottom-100 text-align">
+            Experience the Cloud Speed!
           </h2>
-          <div class="features margin-top-200 margin-bottom-200">
+          <p class="text-align margin-bottom-100">
+            We continuously design and test prototypes that helped identify pain
+            points in the cloud access. Today our solution is number 1 in India.
+          </p>
+          <!-- <div class="features margin-top-200 margin-bottom-200">
             <div class="feature-card">
               <img src="assets/statistics-report-68.png" alt="" />
               <div>
@@ -367,9 +394,9 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="text-align">
-            <button class="cta margin-top-200">Start Free Trail</button>
+            <button class="cta margin-top-200">Start 7 Days Free Trail</button>
           </div>
         </div>
         <div class="wave-3">
@@ -405,24 +432,34 @@
       <div class="container">
         <div class="even-columns">
           <div>
-            <h2 class="fw-bold fs-500 margin-bottom-100">Schedule a Call</h2>
+            <h2 class="fw-bold fs-500 margin-bottom-100">
+              Plan a Call with our Experts
+            </h2>
             <div class="fs-400 margin-bottom-200">
-              Discuss your queries. Make use of our plug and play solution and
-              get live in 15 mins!
+              Immediate Assistance: Engage with Our Plug-and-Play Solution for a
+              15-Minute Live Setup!
             </div>
             <div class="contact">
-              <a href="tel:0"><img src="assets/call-50.png" alt="icon" /></a>
-              <a href="tel:0">9999999</a>
+              <a href="tel:+91 93726 99231"
+                ><img src="assets/call-50.png" alt="icon"
+              /></a>
+              <a href="tel:+91 93726 99231">+91 93726 99231</a>
+              <span class="call-space">|</span>
+              <a href="tel:+91 89288 40447 ">+91 89288 40447 </a>
             </div>
             <div class="contact">
-              <a href="mailto:p"
+              <a href="mailto:krishasoftsolutions@gmail.com"
                 ><img src="assets/mail-48.png " alt="icon"
               /></a>
-              <a href="mailto:p">abc@gmail.com</a>
+              <a href="mailto:krishasoftsolutions@gmail.com"
+                >krishasoftsolutions@gmail.com</a
+              >
             </div>
           </div>
           <div class="questionaire-outer">
             <div class="questionaire">
+              <h2 class="fw-bold fs-450">Ready, Steady, Begin!</h2>
+              <p class="fw-bold fs-450">I am</p>
               <form action="">
                 <div>
                   <select name="profile" id="profile">
@@ -456,7 +493,7 @@
                   </select>
                 </div>
                 <div class="button-div">
-                  <button>Submit</button>
+                  <button>Access Pricing</button>
                 </div>
               </form>
             </div>
