--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Krisha Soft Solutions</title>
   </head>
   <body>
+    <script type="module" src="main.js"></script>
     <header>
       <div class="container">
         <div class="nav-wrapper">
@@ -260,13 +261,20 @@
       <section class="padding-top-900 padding-bottom-1100 bubble-section">
         <div class="container">
           <h2 class="fw-bold fs-500 text-align margin-bottom-200">
-            Trusted By
+            Trusted by a Global Network of 1,500+ Users
           </h2>
-          <div class="margin-top-200 brand-container">
-            <div><img src="assets/walmart-logo.png" alt="Brand Logo" /></div>
-            <div><img src="assets/walmart-logo.png" alt="Brand Logo" /></div>
-            <div><img src="assets/walmart-logo.png" alt="Brand Logo" /></div>
-            <div><img src="assets/walmart-logo.png" alt="Brand Logo" /></div>
+          <div
+            class="margin-top-200 scroller"
+            data-direction="right"
+            data-speed="slow"
+          >
+            <div class="scroller__inner">
+              <img src="assets/logo5new.png" alt="Brand Logo" />
+              <img src="assets/logo4new.png" alt="Brand Logo" />
+              <img src="assets/logo1new.png" alt="Brand Logo" />
+              <img src="assets/logo2new.png" alt="Brand Logo" />
+              <img src="assets/logo3new.png" alt="Brand Logo" />
+            </div>
           </div>
         </div>
         <div class="wave-2">
@@ -286,45 +294,45 @@
 
       <section class="padding-block-900 bg-neutral-400">
         <div class="container">
-          <h3 class="fw-bold fs-500 text-align margin-bottom-200">
+          <h3 class="fw-bold fs-500 text-align padding-bottom-500">
             What they say about us
           </h3>
           <div class="testimonials margin-top-200 text-align">
             <div class="testimonial-card">
               <p>
-                “We were previously using Tally Dot Net Sync for Data sync
-                between different locations. It was very problematic and we had
-                to be very careful. Now it has now become easier to access Tally
-                from all our locations”
+                "I recently migrated my Tally operations to a cloud-based
+                service, and the experience has been nothing short of
+                phenomenal. The transition was smooth, and I've witnessed a
+                remarkable improvement in efficiency and accessibility"
               </p>
-              <p class="fw-semi-bold fs-450">Alex</p>
-              <p>Finance Head, Fake Company</p>
+              <p class="fw-semi-bold fs-450">Ms.Laxmi Raut</p>
+              <p>Senior Accounts Manager, AGENCY09</p>
             </div>
             <div class="testimonial-card">
               <p>
-                “We were previously using Tally Dot Net Sync for Data sync
-                between different locations. It was very problematic and we had
-                to be very careful. Now it has now become easier to access Tally
-                from all our locations”
+                “Earlier we were using the default Tally Synchronisation
+                features for two locations then it was having some issues so
+                working time was wasted then we bought Tally on Cloud services
+                and after that our work is running smoothly”
               </p>
-              <p class="fw-semi-bold fs-450">Alex</p>
-              <p>Finance Head, Fake Company</p>
+              <p class="fw-semi-bold fs-450">Mr.Lalit Rathod</p>
+              <p>Owner, Shree Marketing</p>
             </div>
             <div class="testimonial-card">
               <p>
-                “We were previously using Tally Dot Net Sync for Data sync
-                between different locations. It was very problematic and we had
-                to be very careful. Now it has now become easier to access Tally
-                from all our locations”
+                “We are highly satisfied with the support services provided by
+                KRISHA SOFT SOLUTIONS. Their support system promptly addresses
+                our needs, even on an urgent basis and outside regular office
+                hours. We express our sincere gratitude. Thank you very much.”
               </p>
-              <p class="fw-semi-bold fs-450">Alex</p>
-              <p>Finance Head, Fake Company</p>
+              <p class="fw-semi-bold fs-450">Mr.Hitesh Gala</p>
+              <p>Owner, Deepali Traders</p>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="padding-top-900 padding-bottom-1100 bubble-section">
+      <section class="padding-top-900 padding-bottom-900 bubble-section">
         <div class="container">
           <p class="fw-semi-bold text-align margin-bottom-100">
             Prepared to Make a Move ?
@@ -412,7 +420,7 @@
             ></path>
           </svg>
         </div>
-        <div class="wave-4">
+        <!-- <div class="wave-4">
           <svg
             data-name="Layer 1"
             xmlns="http://www.w3.org/2000/svg"
@@ -424,7 +432,7 @@
               class="shape-fill"
             ></path>
           </svg>
-        </div>
+        </div> -->
       </section>
     </main>
 
