final layout changes

--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
           >
             Benefits of Tally on cloud
           </h2>
-          <div class="even-columns margin-bottom-200">
-            <div class="benefit-left">
-              <div>
+          <div class="three-col margin-bottom-200">
+              <div class="benefit-text">
                 <div class="margin-top-200 flex">
                   <img src="assets/central-database-53.png" alt="icon" />
                   <p class="benefit-p">
@@ -137,15 +136,40 @@
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
+                  <img src="assets/server-64.png" alt="icon" />
+                  <p class="benefit-p">Automated Data Backup Solutions</p>
+                </div>
+                <div class="margin-top-200 flex">
                   <img src="assets/statistics-report-68.png" alt="icon" />
                   <p class="benefit-p">
                     Improving the Simplicity and Efficiency of Planning,
                     Budgeting, Forecasting, and Analysis
                   </p>
                 </div>
+                
                 <div class="margin-top-200 flex">
-                  <img src="assets/server-64.png" alt="icon" />
-                  <p class="benefit-p">Automated Data Backup Solutions</p>
+                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <p class="benefit-p">
+                    Secure Data Exchange Strategies
+                  </p>
+                </div>
+                <div class="margin-top-200 flex">
+                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <p class="benefit-p">
+                    Automatic Performance Optimisation: Enhancing Efficiency
+                    with Ease
+                  </p>
+                </div>
+              </div>
+              <div class="benefit-icon">
+                <img src="assets/benefits.png  " alt="" />
+              </div>
+              <div class="benefit-text">
+                <div class="margin-top-200 flex">
+                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <p class="benefit-p">
+                    Customisable Cloud Solutions with Built-in Scalability
+                  </p>
                 </div>
                 <div class="margin-top-200 flex">
                   <img src="assets/security-shield-50.png" alt="icon" />
@@ -157,23 +181,26 @@
                 <div class="margin-top-200 flex">
                   <img src="assets/security-shield-50.png" alt="icon" />
                   <p class="benefit-p">
-                    Automatic Performance Optimisation: Enhancing Efficiency
-                    with Ease
+                    Budget-Friendly Solutions: The Cost-Effective Nature of Tally on Cloud
                   </p>
                 </div>
                 <div class="margin-top-200 flex">
                   <img src="assets/security-shield-50.png" alt="icon" />
                   <p class="benefit-p">
-                    Customisable Cloud Solutions with Built-in Scalability
+                    24/7 Customer Service 365 Days a Year
+                  </p>
+                </div>
+                <div class="margin-top-200 flex">
+                  <img src="assets/security-shield-50.png" alt="icon" />
+                  <p class="benefit-p">
+                    Printing Remotely: A Convenient Printing Solution
                   </p>
                 </div>
               </div>
             </div>
-            <div class="benefit-icon">
-              <img src="assets/cloud-computing-data.svg  " alt="" />
+            <div class="text-align">
+              <button class="cta margin-top-200">Get Free Trail</button>
             </div>
-          </div>
-          <button class="cta margin-top-200">Get Free Trail</button>
         </div>
         <div class="wave-1">
           <svg
@@ -284,9 +311,9 @@
             <div class="scroller__inner">
               <img src="assets/logo2.png" alt="Brand Logo" />
               <img src="assets/logo3.png" alt="Brand Logo" />
+              <img src="assets/logo1.png" alt="Brand Logo" />
               <img src="assets/logo4.png" alt="Brand Logo" />
               <img src="assets/logo5.jpg" alt="Brand Logo" />
-              <img src="assets/logo1.png" alt="Brand Logo" />
               <img src="assets/logo6.png" alt="Brand Logo" />
             </div>
           </div>
